Added citylist using database

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=DESKTOP-4KPVD4F\\SQLEXPRESS; database=RealEstate; user id=sa; password=Sohail@123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
