--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=DESKTOP-4KPVD4F\\SQLEXPRESS; database=RealEstate; user id=sa; password=Sohail@123"
+    "Default": "server=LT-OB-SOHAILS; database=RealEstate; user id=sa; password=123"
   },
   "Logging": {
     "LogLevel": {
