--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=LT-OB-SOHAILS; database=RealEstate; user id=sa; password=123"
+    "Default": "server=DESKTOP-5121FUJ\\SQLEXPRESS; database=RealEstate; Integrated Security=SSPI"
   },
   "Logging": {
     "LogLevel": {
