JWT token implimented

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Key": "shhh.... This is my very secrete key"
+  },
   "ConnectionStrings": {
     "Default": "server=DESKTOP-5121FUJ\\SQLEXPRESS; database=RealEstate; Integrated Security=SSPI"
   },
